# NER-Named-Entity-Recognition

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  train.py
configs/: train.yaml
configs/callbacks/: defaults.yaml
configs/data/: defaults.yaml
configs/hydra/: defaults.yaml
configs/logger/: defaults.yaml
configs/loss/: defaults.yaml
configs/metrics/: defaults.yaml
configs/model/: bert.yaml  defaults.yaml
configs/module/: bert.yaml  defaults.yaml
configs/trainer/: defaults.yaml
notebook/: NER.ipynb  configs  data  data.ipynb  data_conll.ipynb  hydra.ipynb  infer.ipynb  logs  model.ipynb  src  transformers.ipynb  vocab.pth
src/ner/data/: data.py
src/ner/infer/: infer.py
src/ner/loss/: __init__.py  sparse_categorical_ce.py
src/ner/model/: __init__.py  bert.py  model.py  trainer.py
src/ner/module/: module.py
src/ner/transform/: token.py
