[metadata]
name = NER
version = 0.0.1
author = annur afgoni
author_email = afgoniannur@gmail.com
description = package to predict entities in sentences
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/lombokai/NER-Named-Entity-Recognition


[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    numpy
    torch
    torchvision
    lightning

[options.packages.find]
where = src

[flake8]
ignore = E501, F403, F401, W503
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist
filename = ./src/ner/*.p

[isort]
profile = black
line_length = 88
lines_after_imports = 2
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
src_paths = src/ner
known_first_party = ner